Add git details to --version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@
 cmake_minimum_required(VERSION 3.4)
 project(cozmonaut)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+
+include(GetGitRevisionDescription)
+
+get_git_head_revision(GIT_REFSPEC GIT_HASH)
+
 set(cozmo_SRC_FILES
         src/global.c
         src/main.c
@@ -13,3 +19,9 @@ set(cozmo_SRC_FILES
 
 add_executable(cozmo ${cozmo_SRC_FILES})
 set_target_properties(cozmo PROPERTIES C_STANDARD 99)
+
+# Git-related definitions
+target_compile_definitions(cozmo PRIVATE
+        -D__git_hash=${GIT_HASH}
+        -D__git_refspec=${GIT_REFSPEC}
+        )
