--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ include(GetGitRevisionDescription)
 
 get_git_head_revision(GIT_REFSPEC GIT_HASH)
 
+set(cozmo_VERSION_MAJOR 0)
+set(cozmo_VERSION_MINOR 1)
+set(cozmo_VERSION_PATCH 0)
+
 set(cozmo_SRC_FILES
         src/global.c
         src/main.c
@@ -24,4 +28,11 @@ set_target_properties(cozmo PROPERTIES C_STANDARD 99)
 target_compile_definitions(cozmo PRIVATE
         -D__git_hash=${GIT_HASH}
         -D__git_refspec=${GIT_REFSPEC}
+        )
+
+# Version definitions
+target_compile_definitions(cozmo PUBLIC
+        -D__version_major=${cozmo_VERSION_MAJOR}
+        -D__version_minor=${cozmo_VERSION_MINOR}
+        -D__version_patch=${cozmo_VERSION_PATCH}
         )
